fix: patch bad dark mode css

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -73,9 +73,9 @@ button.filemenuitem-document:hover {
 }
 
 * {
-  --file-audio: '#ffce90';
-  --file-document: 'white';
-  --file-image: '#aaaaff';
+  --file-audio: #ffce90;
+  --file-document: white;
+  --file-image: #aaaaff;
 }
 
 @media (prefers-color-scheme: light) {
@@ -91,9 +91,6 @@ button.filemenuitem-document:hover {
     --file-audio: #ffa32e;
     --file-document: 'black';
     --file-image: #5050ff;
-  }
-  a:hover {
-    color: #747bff;
   }
   button {
     background-color: #f9f9f9;
